--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install opencv-python numpy flask
-      shell: cmd
+      shell: bash
 
     - name: Run tests
       run: |
         python -m unittest tests.py
-      shell: cmd
+      shell: bash
