--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,14 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install opencv-python numpy flask
+        pip install opencv-python-headless numpy flask
       shell: bash
-
+      
+    - name: Download face model
+      run: |
+        wget -O face_model.caffemodel http://example.com/path/to/faceModel.caffemodel
+        wget -O face_proto.prototxt http://example.com/path/to/faceProto.prototxt
+        
     - name: Run tests
       run: |
         python -m unittest test.py
