--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,5 +46,5 @@ jobs:
 
     - name: Run tests
       run: |
-        python -m unittest tests.py
+        python -m unittest test.py
       shell: bash
